# nodo-invisible

./: .gitignore  README.md  demo_greetings.py  demo_resonance_processor.py  final_equation_beta.md  main.py  nodo.docx  omega_agent.py  omega_mobile_root.py  omega_ui.py  package-lock.json  pwd  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
core/: constants.py  diagnostics.py  engine.py  validator.py
diagnostics/: OMEGA_REPORT.md  coherence_history.json  omega_diary_publisher.py  omega_report.py
formulas/: coherence.py  constants.py  dynamics.py  energy.py  entropy.py  fractality.py  integration.py  layers_coherence.py  metaconsciousness.py  negentropy.py  phi_dynamics.py  presence.py  resonance.py  truth_VPSI.py  wonder.py
tests/: constants_table.py  final_equation_beta.py  test_anclaje_Ri_R.py  test_angulo_obs.py  test_automedicion.py  test_creacion_materia_por_observacion.py  test_de_novo_predictions.py  test_dynamics.py  test_electron_puro.py  test_frecuencia_materia.py  test_fuerza_debil_vpsi.py  test_fuerza_fuerte_vpsi.py  test_identidad.py  test_monte_carlo_beta_zero_tolerance.py  test_omega_falsification_births.py  test_soberania_angular.py  test_soberania_consciente.py  test_solar_cycle.py  test_tr1_montecarlo.py  test_uis_omega_master_equation.py  test_unification_formula.py  test_usi_omeha_mega_unified.py  test_vpsi_falsifiable.py  tr1_montecarlo.py
